--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,19 @@
 @import '_reset.scss';
+@import '_base-styles.scss';
+@import '_crew-card.scss';
+@import '_die.scss';
 
 $var: white;
 
 body {
   background-color: $var;
+  overflow-x: hidden;
+  overflow-y: auto;
+  font-family: 'Orbitron', sans-serif;
+  background-image: url("../images/bkgrnd-tile.png");
+}
+
+.seperator {
+  border: 1px solid #f1f1f1;
+  margin: 10px 15px;
 }
