--- a/src/styles/_crew-card.scss
+++ b/src/styles/_crew-card.scss
@@ -80,7 +80,7 @@
 .traits-list {
     color: #d50000;
     font-weight: 600;
-    text-shadow: -1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
+    text-shadow: -1px -1px 0 #ffffff,1px -1px 0 #ffffff,-1px 1px 0 #ffffff,1px 1px 0 #ffffff;
     font-size: 14px;
     text-align: center;
 }
