--- a/src/styles/_die.scss
+++ b/src/styles/_die.scss
@@ -13,25 +13,30 @@
     height:50px;
     position:relative;
     transform-style:preserve-3d;
-    transition: transform 1s;
-    animation-delay: 2s;
+    animation-iteration-count: 2;
     }
     .dice-front-view{
+    animation: spin 1.6s linear;
     transform:rotateY(360deg);
     }
     .dice-right-view{
+    animation: spin 1.6s linear;
     transform:rotateY(-90deg);
     }
     .dice-back-view{
+    animation: spin 1.6s linear;
     transform:rotateY(180deg);
     }
     .dice-left-view{
+    animation: spin 1.6s linear;
     transform:rotateY(90deg);
     }
     .dice-top-view{
+    animation: spin 1.6s linear;
     transform:rotateX(-90deg);
     }
     .dice-bottom-view{
+    animation: spin 1.6s linear;
     transform:rotateX(90deg);
     }
     .diceFace{
@@ -64,4 +69,14 @@
     .bottom{
     background-color:rgba(0,0,255,0.6);
     transform:rotateX(-90deg) translateZ(25px);
+    }
+
+    @keyframes spin {
+        0% { transform: translateZ(-100px) rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
+        16% { transform: translateZ(-100px) rotateX(180deg) rotateY(180deg) rotateZ(0deg); }
+        33% { transform: translateZ(-100px) rotateX(360deg) rotateY(90deg) rotateZ(180deg); }
+        50% { transform: translateZ(-100px) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
+        66% { transform: translateZ(-100px) rotateX(180deg) rotateY(360deg) rotateZ(270deg); }
+        83% { transform: translateZ(-100px) rotateX(270deg) rotateY(180deg) rotateZ(180deg); }
+        100% { transform: translateZ(-100px) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
     }
