--- a/src/styles/_die.scss
+++ b/src/styles/_die.scss
@@ -44,30 +44,29 @@
     width:50px;
     height:50px;
     line-height:50px;
-    border:2px solid #a00;
     }
     .front{
-    background-color:rgba(255,0,0,0.6);
+    background-image: url("../images/die/one.png");
     transform:rotateY(0deg) translateZ(25px);
     }
     .right{
-    background-color:rgba(0,255,0,0.6);
+    background-image: url("../images/die/two.png");
     transform:rotateY(90deg) translateZ(25px);
     }
     .back{
-    background-color:rgba(255,255,0,0.6);
+        background-image: url("../images/die/three.png");
     transform:rotateY(180deg) translateZ(25px);
     }
     .left{
-    background-color:rgba(255,0,255,0.6);
+    background-image: url("../images/die/four.png");
     transform:rotateY(-90deg) translateZ(25px);
     }
     .top{
-    background-color:rgba(0,255,255,0.6);
+    background-image: url("../images/die/five.png");
     transform:rotateX(90deg) translateZ(25px);
     }
     .bottom{
-    background-color:rgba(0,0,255,0.6);
+    background-image: url("../images/die/six.png");
     transform:rotateX(-90deg) translateZ(25px);
     }
 
