--- a/src/styles/_mission-card.scss
+++ b/src/styles/_mission-card.scss
@@ -74,6 +74,17 @@
     pointer-events: none;
 }
 
+.mission-target-rule-text {
+    pointer-events: none;
+    position: absolute;
+    top: 73px;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    text-align: center;
+    font-size: 12px;
+}
+
 .mission-target-num {
     position: absolute;
     top: 100px;
