--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,15 +3,21 @@
 @import '_crew-card.scss';
 @import '_die.scss';
 @import '_mission-card.scss';
-
-$var: white;
+@import '_phases-ui.scss';
 
 body {
-  background-color: $var;
   overflow-x: hidden;
   overflow-y: auto;
   font-family: 'Orbitron', sans-serif;
   background-image: url("../images/bkgrnd-tile.png");
+}
+
+.section-title {
+  color: white;
+  font-weight: 600;
+  margin: 5px 15px;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .seperator {
@@ -19,7 +25,7 @@ body {
   margin: 10px 15px;
 }
 
-.level-one-column {
+.level-column {
   display: inline-block;
   vertical-align: top;
   position: relative;
