Traits and triggers

--- a/src/styles/_mission-card.scss
+++ b/src/styles/_mission-card.scss
@@ -36,6 +36,7 @@
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+    backface-visibility: hidden;
 }
 
 .mission-front,
