--- a/src/styles/_crew-card.scss
+++ b/src/styles/_crew-card.scss
@@ -30,6 +30,7 @@
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+    backface-visibility: hidden;
 }
 
 .crew-front,
@@ -37,7 +38,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
     background-color: #bbb;
 }
