Modal for player notifications and dice rolling bug fix

--- a/src/styles/_base-styles.scss
+++ b/src/styles/_base-styles.scss
@@ -9,3 +9,15 @@
 .re-display-none {
     display: none;
 }
+
+.re-blue {
+    color: #0000f2
+}
+
+.re-green {
+    color:#6eff6e
+}
+
+.re-pointer {
+    cursor: pointer;
+}
