--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import '_die.scss';
 @import '_mission-card.scss';
 @import '_phases-ui.scss';
+@import '_modal.scss';
 
 body {
   overflow-x: hidden;
