Modal content and various bug fixes

--- a/src/styles/_die.scss
+++ b/src/styles/_die.scss
@@ -1,3 +1,4 @@
+.mr-view,
 .view {
     width: 70px;
     height: 70px;
@@ -16,6 +17,7 @@
     background: rgb(216, 216, 0);
 }
 
+.mr-dice,
 .dice {
     width:50px;
     height:50px;
