--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -11,9 +11,38 @@
 .modal-content {
     background-color: white;
     border-radius: 5px;
-    padding: 20px 15px;
+    padding: 15px 20px 25px 20px;
     max-width: 800px;
     margin: 100px auto;
     overflow-y: auto;
     overflow-x: hidden;
+    position: relative;
+    line-height: 1.5rem;
+}
+
+.modal-close-icon {
+    position: absolute;
+    top: 5px;
+    right: 0;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+
+.modal-buttons-wrapper {
+    margin-top: 15px;
+    text-align: right;
+}
+
+.modal-paragraph {
+    margin: 8px 0;
+}
+
+.modal-aldren-image {
+    max-width: 200px;
+    margin: 0 auto;
+}
+
+.modal-h2-spacing {
+    margin-bottom: 10px;
 }
