Added new font for readability, added story and rules text

--- a/src/styles/_crew-card.scss
+++ b/src/styles/_crew-card.scss
@@ -1,6 +1,8 @@
 .crew-cards-wrapper {
     text-align: center;
     margin-bottom: 70px;
+    max-width: 1500px;
+    margin: 0 auto;
 }
 
 .crew-grid-cell {
