--- a/src/styles/_phases-ui.scss
+++ b/src/styles/_phases-ui.scss
@@ -1,13 +1,13 @@
 .phases-wrapper {
     height: 50px;
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
     right: 0;
     background-color: grey;
     padding: 10px 15px;
     transition: transform 150ms ease-in;
-    border-top: 2px solid #FFFFFF
+    border-bottom: 2px solid #FFFFFF
 }
 
 .phases-direction-text {
@@ -37,19 +37,20 @@
     width: 400px;
     color: #000000;
     background: #FFFFFF;
-    text-align: center;
     visibility: hidden;
     border-radius: 6px;
     padding: 10px 15px;
     opacity: 0;
     transition: opacity 150ms ease-in-out;
     line-height: 1.5rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 .tooltips:hover span {
     visibility: visible;
-    bottom: 30px;
+    top: 30px;
     margin-left: -30px;
     z-index: 20;
     opacity: 1;
+    border: 1px solid #000
 }
