--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -42,7 +42,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.modal-aldren-image {
+.modal-crew-image {
     max-width: 100px;
     margin: 0 auto;
 }
@@ -54,4 +54,19 @@
 .modal-glossary-section {
     overflow: hidden;
     margin-bottom: 10px;
+}
+
+.modal-bkgrd-lght-grey {
+    background-color: #f1f1f1;
+}
+
+.modal-img-right {
+    float:right;
+    margin-left:5px;
+}
+
+.modal-img-left {
+    float:left;
+    margin-right: 10px;
+
 }
