Responsive work, and alternate game type modal to choose simple of complex

--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -70,3 +70,18 @@
     margin-right: 10px;
 
 }
+
+.audio-icon {
+    position: absolute;
+    top: 7px;
+    left: 10px;
+    width: 30px;
+}
+
+.modal-audio-in-text {
+    display: inline-block;
+    position:relative;
+    width: 25px;
+    height: 25px;
+    margin: 0 17px 0 0;
+}
