--- a/src/styles/_crew-card.scss
+++ b/src/styles/_crew-card.scss
@@ -44,6 +44,17 @@
     background-color: #bbb;
 }
 
+.crew-madness-cover {
+    background-color: red;
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
 .crew-back {
     transform: rotateY(180deg);
     z-index: 10;
