--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -73,6 +73,12 @@ body {
   display: none;
 }
 
+.copyright-wrapper {
+  text-align: center;
+  color: #fff;
+  margin: 70px 0;
+}
+
  @media only screen and (max-width: 568px) {
   .desktop-inline {
     display: none;
