Safari specific render fixes

--- a/src/styles/_mission-card.scss
+++ b/src/styles/_mission-card.scss
@@ -37,6 +37,7 @@
     transition: transform 0.8s;
     transform-style: preserve-3d;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .mission-front,
@@ -46,6 +47,7 @@
     height: 100%;
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
+    z-index: 1;
 }
 
 .mission-front {
@@ -55,7 +57,6 @@
 .mission-back {
     background-color: red;
     transform: rotateY(180deg);
-    z-index: 10;
 }
 
 .mission-failed{
