--- a/src/styles/_crew-card.scss
+++ b/src/styles/_crew-card.scss
@@ -33,6 +33,7 @@
     transition: transform 0.8s;
     transform-style: preserve-3d;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .crew-front,
@@ -41,7 +42,9 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     background-color: #bbb;
+    z-index: 1;
 }
 
 .crew-madness-cover {
@@ -57,7 +60,6 @@
 
 .crew-back {
     transform: rotateY(180deg);
-    z-index: 10;
 }
 
 .crew-inactive{
